test/classes/initializers/generics/phase2-only-param-default-type.good
phase2-only-param-default-type.chpl:7: In initializer:
phase2-only-param-default-type.chpl:8: error: cannot assign to param field 'p' during Phase 2 of initialization
